Hotfix could not verify csrf token when calling api

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -6,7 +6,7 @@
 @import "./emojione/emojione.min.css";
 @import "./emojione/emojionearea.min.css";
 @import "./linebot.css";
-// @import "./common.css";
+@import "./common.css";
 @import "./chatbox.scss";
 @import "./perfect-scrollbar.min.css";
 @import "./register.css";
