ユーザーセッションフォームの構造を簡素化し、サーバーサイドエラーメッセージの表示を追加。CSRFトークンの取得をマウント時に行うように変更し、フォームの可読性とユーザー体験を向上。

--- a/app/views/layouts/auth.html.erb
+++ b/app/views/layouts/auth.html.erb
@@ -24,7 +24,9 @@
     <div class="wrapper">
       <div class="content container-fluid">
         <div class="container-fluid" id="application">
-          <%= custom_flash_message %>
+          <div id="flash-messages" style="display: none;">
+            <%= custom_flash_message %>
+          </div>
           <%= yield %>
         </div>
       </div>
